// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails to solve needs-sat tree 1`] = `[Error: Unable to resolve dependency graph for given manifest]`;

exports[`fails to solve unresolvable tree 1`] = `[Error: Unable to resolve dependency graph for given manifest]`;

exports[`solves complex tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "json",
        "registry": "vba-blocks",
        "version": "^2.3.0",
      },
    ],
    "id": "web@4.1.5",
    "name": "web",
    "source": "registry+vba-blocks#2a4127262423459a75b79579fe3b670daa58b1be41b02d01e7c01465cd8e4a35",
    "version": "4.1.5",
  },
  Object {
    "dependencies": Array [
      Object {
        "name": "dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "json@2.3.0",
    "name": "json",
    "source": "registry+vba-blocks#42372ab20cd42fc364b68207c17cf063f267abd3d3ec738315b00b25fb7c690f",
    "version": "2.3.0",
  },
  Object {
    "dependencies": Array [],
    "id": "dictionary@1.4.1",
    "name": "dictionary",
    "source": "registry+vba-blocks#8034e569e4efcb7bdb1a0600c0aa2d857147b8be0ccbc6764af065d45e967e46",
    "version": "1.4.1",
  },
]
`;

exports[`solves standard tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "name": "dictionary",
        "registry": "vba-blocks",
        "version": "^1",
      },
    ],
    "id": "json@2.3.0",
    "name": "json",
    "source": "registry+vba-blocks#42372ab20cd42fc364b68207c17cf063f267abd3d3ec738315b00b25fb7c690f",
    "version": "2.3.0",
  },
  Object {
    "dependencies": Array [],
    "id": "dictionary@1.4.1",
    "name": "dictionary",
    "source": "registry+vba-blocks#8034e569e4efcb7bdb1a0600c0aa2d857147b8be0ccbc6764af065d45e967e46",
    "version": "1.4.1",
  },
]
`;
